Fixed change password bug on iOS

--- a/style.css
+++ b/style.css
@@ -496,3 +496,65 @@ h5.leftmargin-16 {
   -ms-flex-pack: center;
   justify-content: center;
 }
+
+/*POLYFILL DIALOGUE*/
+/* line 430, style.scss */
+.mdl-dialog {
+  border: none;
+  box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0 24px 38px 3px rgba(0, 0, 0, 0.2);
+  width: 280px;
+}
+
+/* line 434, style.scss */
+.mdl-dialog__title {
+  padding: 24px 24px 0;
+  margin: 0;
+  font-size: 2.5rem;
+}
+
+/* line 438, style.scss */
+.mdl-dialog__actions {
+  padding: 8px 8px 8px 24px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+/* line 449, style.scss */
+.mdl-dialog__actions > * {
+  margin-right: 8px;
+  height: 36px;
+}
+
+/* line 452, style.scss */
+.mdl-dialog__actions > *:first-child {
+  margin-right: 0;
+}
+
+/* line 454, style.scss */
+.mdl-dialog__actions--full-width {
+  padding: 0 0 8px 0;
+}
+
+/* line 456, style.scss */
+.mdl-dialog__actions--full-width > * {
+  height: 48px;
+  -webkit-flex: 0 0 100%;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  padding-right: 16px;
+  margin-right: 0;
+  text-align: right;
+}
+
+/* line 464, style.scss */
+.mdl-dialog__content {
+  padding: 20px 24px 24px 24px;
+  color: rgba(0, 0, 0, 0.54);
+}
